test/corpus/atomic-expressions.txt
=================
Record selector expression 1
=================

val _ = #1

-------

(source_file
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (record_selector_expression
          (int_label
            (index)))))))

=================
Record selector expression 2
=================

val _ = #x

-------

(source_file
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (record_selector_expression
          (identifier_label
            (identifier)))))))

=================
Not record selector expression 1
=================

val _ = #**

-------

(source_file
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (identifier_expression
          (qualified_identifier
            (identifier)))))))

=================
Not record selector expression 2
=================

val _ = ###

-------

(source_file
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (identifier_expression
          (qualified_identifier
            (identifier)))))))

=================
Unit 1
=================

val _ = ()

-------

(source_file
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (unit_expression)))))

=================
Unit 2
=================

val _ = ( )

-------

(source_file
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (unit_expression)))))

=================
Unit 3
=================

val _ = ((**))

-------

(source_file
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (unit_expression
          (comment))))))

=================
Tuple
=================

val _ = (x, y)

-------

(source_file
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (tuple_expression
          (identifier_expression
            (qualified_identifier
              (identifier)))
          (identifier_expression
            (qualified_identifier
              (identifier))))))))

=================
List
=================

val _ = [1, 2, 3]

-------

(source_file
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (list_expression
          (integer_literal)
          (integer_literal)
          (integer_literal))))))

=================
Sequence
=================

val _ = (a;b)

-------

(source_file
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (sequence_expression
          (identifier_expression
            (qualified_identifier
              (identifier)))
          (identifier_expression
            (qualified_identifier
              (identifier))))))))

=================
Invalid sequence
:error
=================

val _ = (a;)

-------

(source_file
  (expression_declaration
    (list_expression
      (integer_literal)
      (integer_literal)
      (integer_literal))))

==================
Parenthesized
==================

val _ = (a (b andalso c))

-------

(source_file
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (parenthesized_expression
          (application_expression
            (identifier_expression
              (qualified_identifier
                (identifier)))
            (parenthesized_expression
              (conjunction_expression
                (identifier_expression
                  (qualified_identifier
                    (identifier)))
                (identifier_expression
                  (qualified_identifier
                    (identifier)))))))))))
