test/corpus/comments.txt
==============================
Comments
==============================

(**)
(* *)
(**
  doc
*)
val _ = 3

---

(source_file
  (comment)
  (comment)
  (comment)
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (atomic_application_expression
          (integer_literal))))))

==============================
Comment in string
==============================

val _ = "(* *)"

---

(source_file
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (atomic_application_expression
          (string_literal))))))

==============================
String in comment
==============================

(* "hello" *)
val _ = 3

---

(source_file
  (comment)
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (atomic_application_expression
          (integer_literal))))))

==============================
Weird stuff in comment
==============================

(* '"' *)
(* f' '"' *)
(*  *)
(* '\o170' '"' *)
(* '\'"' *)
(* '\" " *)
(* '" " *)
(* '*)
(* é' '"' *)
(* '✅✅''"'" *)
val _ = 3

---

(source_file
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (atomic_application_expression
          (integer_literal))))))

==============================
Comment in comment
==============================

(* (* (* *) *) *)
(* (* (*) *) *) *)
val _ = 3

---

(source_file
  (comment)
  (comment)
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (atomic_application_expression
          (integer_literal))))))

==============================
Not a comment
==============================

val _ = (op *)

---

(source_file
  (value_declaration
    (valbind
      (lhs
        (wildcard))
      (rhs
        (atomic_application_expression
          (parenthesized_expression
            (atomic_application_expression
              (identifier_expression
                (qualified_identifier
                  (symbolic_identifier))))))))))
